--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 	<div class="container">
 		<header>
-			<h1>Yeshwanth L M</h1>
-			<p>Cloud Solutions Engineer</p>
+			<h1><U>PRAVEEN KUMAR GADDAM</U></h1>
+			<p> TECHNICAL STAFF </p>
 		</header>
 		<section>
 			<h2>Summary</h2>
