--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<div class="container">
 		<header>
-			<h1><U>PRAVEEN KUMAR GADDAM</U></h1>
+			<h1><U><font color="navy">PRAVEEN KUMAR GADDAM</font></U></h1>
 			<p> TECHNICAL STAFF </p>
 		</header>
 		<section>
@@ -19,12 +19,12 @@
 		<section>
 			<h2>Skills</h2>
 			<ul>
+				<li>C LANGUAGE</li>
+				<li>C++</li>
+				<li>JAVA</li>
+				<li>DEVOPS</li>
+				<li>GITHUB</li>
 				<li>AWS</li>
-				<li>Azure</li>
-				<li>CICD</li>
-				<li>Google Cloud</li>
-				<li>Bootstrap</li>
-				<li>React</li>
 			</ul>
 		</section>
 		<section>
@@ -36,7 +36,7 @@
 		</section>
 		<section>
 			<h2>Education</h2>
-			<h3>Bachelor of Science in Computer Science</h3>
+			<h3>Bachelor of Technology in Computer Science</h3>
 			<p>University of ABC, Graduated May 20XX</p>
 		</section>
 		<section id="projects">
