--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<div class="container">
 		<header>
-			<h1><U><font color="navy">PRAVEEN KUMAR GADDAM</font></U></h1>
+			<h1><font color="navy">PRAVEEN KUMAR GADDAM</font></h1>
 			<p> TECHNICAL STAFF </p>
 		</header>
 		<section>
